K1J-406: Some cleaning for ide warnings